saved model using pickle and joblib

--- a/LinearRegressionSingleVariable.ipynb
+++ b/LinearRegressionSingleVariable.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt \n",
     "from sklearn import linear_model"
    ]
   },
@@ -119,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "73195d6c-feb3-4bf1-8315-7bda0041d18b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12e793c50>"
+       "<matplotlib.collections.PathCollection at 0x16ab3ed10>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "05de067f-7241-4c24-9ad4-1afa046e2151",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "4  4000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "00b8021f-55d6-4eda-be88-595c66da0628",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "Name: price, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "00de8bc4-b348-4068-b344-14b21658960a",
    "metadata": {},
    "outputs": [
@@ -282,14 +282,14 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg = linear_model.LinearRegression()\n",
-    "reg.fit(new_df, price)"
+    "model = linear_model.LinearRegression()\n",
+    "model.fit(new_df, price)"
    ]
   },
   {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "35207970-19a0-4a7f-85f7-9b3e0209ea8a",
    "metadata": {},
    "outputs": [
@@ -320,18 +320,18 @@
        "array([628715.75342466])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg.predict([[3300]])"
+    "model.predict([[3300]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "98fa5594-1873-4305-87f2-615bf253b81f",
    "metadata": {},
    "outputs": [
@@ -341,18 +341,18 @@
        "array([135.78767123])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg.coef_"
+    "model.coef_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "813d6cc2-5d03-4457-9ba9-c1646ff931d1",
    "metadata": {},
    "outputs": [
@@ -362,13 +362,13 @@
        "180616.43835616432"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg.intercept_"
+    "model.intercept_"
    ]
   },
   {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "8c41b1b2-c99d-49c7-afda-df5d6366bdef",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
        "628715.7534151643"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
     }
    ],
    "source": [
-    "reg.predict([[5000]])"
+    "model.predict([[5000]])"
    ]
   },
   {
@@ -455,12 +455,12 @@
     }
    ],
    "source": [
-    "reg.coef_"
+    "model.coef_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "73ad350c-2de9-42c0-bcbd-8b4da3a500df",
    "metadata": {},
    "outputs": [
@@ -470,13 +470,13 @@
        "180616.43835616432"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg.intercept_"
+    "model.intercept_"
    ]
   },
   {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "9a28ae48-2e82-4af2-8249-b4edd0c2fd7d",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "12  7100"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,6 +784,145 @@
    "outputs": [],
    "source": [
     "area_df.to_csv(\"prediction.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e01c8b08-813f-44a3-ac04-7c8463e9dd15",
+   "metadata": {},
+   "source": [
+    "## Saving model using pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ed9d9bf0-fb47-4c22-8264-70573b66fbf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "22d1145c-d5e0-4f2c-b4a7-828e3bb46144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('model_pickle', 'wb') as f:\n",
+    "    pickle.dump(model, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b9f5b2fb-c4a8-4ff6-afe8-edb2c91e9b2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('model_pickle', 'rb') as f:\n",
+    "    mp = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "da5e831d-52e7-4e10-9e24-2fe660161eb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 316404.10958904,  384297.94520548,  492928.08219178,\n",
+       "        661304.79452055,  740061.64383562,  799808.21917808,\n",
+       "        926090.75342466,  650441.78082192,  825607.87671233,\n",
+       "        492928.08219178, 1402705.47945205, 1348390.4109589 ,\n",
+       "       1144708.90410959])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mp.predict(area_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a9c663-5f4a-45b4-8d7b-47d6cb4b17c9",
+   "metadata": {},
+   "source": [
+    "## Saving model using joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9d4da4de-73c3-4552-be71-4eb9c19478eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b6c833f1-372c-4d02-8a62-abd0d7c85fdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model_joblib']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model, 'model_joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "448a2635-dd32-4afa-a47b-52df6684b4f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mj = joblib.load('model_joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cc8e3c85-41ad-4795-8077-8c2abf39c28b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 316404.10958904,  384297.94520548,  492928.08219178,\n",
+       "        661304.79452055,  740061.64383562,  799808.21917808,\n",
+       "        926090.75342466,  650441.78082192,  825607.87671233,\n",
+       "        492928.08219178, 1402705.47945205, 1348390.4109589 ,\n",
+       "       1144708.90410959])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mj.predict(area_df)"
    ]
   }
  ],
